Implement image generation API with Pollinations.ai

--- a/emisor/index.html
+++ b/emisor/index.html
@@ -192,9 +192,21 @@
             drawing = false;
         });
 
-        clearButton.addEventListener('click', () => {
+        // Helper to draw image
+        function drawImage(url) {
+            const img = new Image();
+            img.onload = () => {
+                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+            };
+            img.src = url;
+        }
+
+        socket.on('image', (data) => {
+            drawImage(data.url);
+        });
+
+        socket.on('clear', () => {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            socket.emit('clear');
         });
     </script>
 </body>
