--- a/emisor/index.html
+++ b/emisor/index.html
@@ -201,6 +201,11 @@
             img.src = url;
         }
 
+        clearButton.addEventListener('click', () => {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            socket.emit('clear');
+        });
+
         socket.on('image', (data) => {
             drawImage(data.url);
         });
