--- a/emisor/index.html
+++ b/emisor/index.html
@@ -196,7 +196,27 @@
         function drawImage(url) {
             const img = new Image();
             img.onload = () => {
-                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+                // Clear canvas first
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+                // Calculate dimensions to center the image
+                // Leave space for controls at bottom
+                const maxWidth = canvas.width * 0.7;
+                const maxHeight = (canvas.height - 120) * 0.7;
+
+                let drawWidth = img.width;
+                let drawHeight = img.height;
+
+                // Scale to fit within max dimensions while maintaining aspect ratio
+                const scale = Math.min(maxWidth / img.width, maxHeight / img.height);
+                drawWidth = img.width * scale;
+                drawHeight = img.height * scale;
+
+                // Center the image
+                const x = (canvas.width - drawWidth) / 2;
+                const y = (canvas.height - drawHeight) / 2;
+
+                ctx.drawImage(img, x, y, drawWidth, drawHeight);
             };
             img.src = url;
         }
