Update to transparent background and bigger size

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -169,8 +169,9 @@
 
                 // Calculate dimensions to center the image
                 // Leave space for footer (60px) and some padding
-                const maxWidth = canvas.width * 0.7;
-                const maxHeight = (canvas.height - 120) * 0.7; // 60px top + 60px bottom
+                const maxWidth = canvas.width * 0.85;
+                const maxHeight = (canvas.height - 120) * 0.85;
+                // 60px top + 60px bottom
 
                 let drawWidth = img.width;
                 let drawHeight = img.height;
