Reduce polling to 2s and add footer click to clear

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -232,6 +232,13 @@
         socket.on('clear', () => {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
         });
+
+        // Add click handler to footer to clear canvas
+        const footer = document.getElementById('footer');
+        footer.addEventListener('click', () => {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            socket.emit('clear');
+        });
     </script>
 </body>
 
