Fix header positioning to prevent trimming

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -34,8 +34,8 @@
         }
 
         #header {
-            top: -13px;
-            /* Adjust as needed to remove the space */
+            top: 0;
+            /* Position at the very top */
             margin-top: 0;
             /* Remove any unwanted space above */
             background-color: transparent;
