Fix header image cropping by using contain instead of cover

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -29,7 +29,9 @@
             position: fixed;
             left: 0;
             z-index: 10;
-            background-size: cover;
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
             background-color: transparent;
         }
 
