Adjust header and footer positioning for better iOS Notes layout

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -36,8 +36,8 @@
         }
 
         #header {
-            top: 0;
-            /* Position at the very top */
+            top: -10px;
+            /* Position slightly above the top */
             margin-top: 0;
             /* Remove any unwanted space above */
             background-color: transparent;
@@ -46,9 +46,9 @@
 
         /* Move header and footer closer to top/bottom */
         #footer {
-            bottom: 15px;
-            /* Move footer 20px upwards */
-            margin-bottom: 20px;
+            bottom: 0;
+            /* Position at the very bottom */
+            margin-bottom: 0;
             /* Remove unwanted space below footer */
         }
 
